# db/models.go
@@ -1,10 +1,8 @@
 package db
 
-import "gorm.io/gorm"
-
 type Gift struct {
 	//LIFEHACK: use string id like 'gift_ajdsjanjklsnls'
-	ID string 		   `json:"id"`
+	ID string `json:"id"`
 	// UserID      string `json:"user_id"`
 	Name        string `json:"name"`
 	Price       int    `json:"price"` //TODO: use decimal.Decimal instead of int
@@ -16,31 +14,28 @@ type Gift struct {
 }
 
 type User struct {
-	ID           int    		`json:"id"`
-	Name         string 		`json:"name"`
-	Price        int    		`json:"price"`
-	Description  string 		`json:"description"`
-	IsFavorite   string 		`json:"is_favorite"`
-	Link         string 		`json:"link"`
-	Birthday     string 		`json:"birthday"`
-	Coins        int    		`json:"coins"`
-	gorm.Model
-	Role 		 Role   		`gorm:"foreigKey:role_id"`
-	UserWishlist []UserWishlist `gorm:"foreignKey:id"`
+	ID          string `json:"id"`
+	Name        string `json:"name"`
+	Price       int    `json:"price"`
+	Description string `json:"description"`
+	Link        string `json:"link"`
+	Birthday    string `json:"birthday"`
+	Coins       int    `json:"coins"`
+	Role_name   Role   `gorm:"foreignKey:Name"`
 }
 
 type UserWishlist struct {
-	ID     int    `json:"id"`
 	Name   string `json:"name"`
-	UserID int    `json:"user_id"`
-	GiftID int    `json:"gift_id"`
-
+	UserID int    `json:"user_id" gorm:"primaryKey"`
+	Gifts []Gift  `json:"gifts" gorm:"foreignKey:id"`
 }
 
 type Role struct {
-	ID     int 	  `json:"id"`
-	RoleID int    `json:"role_id"`
-	Name   string `json:"name"`
-	gorm.Model
-	
+	ID   int    `json:"id"`
+	Name string `json:"name"`
+}
+
+type UserRole struct {
+	UserID int `gorm:"primaryKey"`
+	RoleID int `gorm:"primaryKey"`
 }
