# docs/swagger.yaml
@@ -43,30 +43,6 @@ info:
   title: Wishlist
   version: "1.0"
 paths:
-  /:
-    post:
-      consumes:
-      - '*/*'
-      description: get the status of server.
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/server.ResponseHTTP'
-            - properties:
-                data:
-                  $ref: '#/definitions/db.Gift'
-              type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/server.ResponseHTTP'
-      summary: gifts
-      tags:
-      - Gifts
   /docs/gifts:
     get:
       consumes:
@@ -93,4 +69,34 @@ paths:
       summary: Get all books
       tags:
       - giftss
+    post:
+      consumes:
+      - application/json
+      description: get the status of server.
+      parameters:
+      - description: Create Gift
+        in: body
+        name: Gift
+        required: true
+        schema:
+          $ref: '#/definitions/db.Gift'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/server.ResponseHTTP'
+            - properties:
+                data:
+                  $ref: '#/definitions/db.Gift'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/server.ResponseHTTP'
+      summary: Creates a new gift.
+      tags:
+      - Gifts
 swagger: "2.0"
